# commit-message-benchmark

./: .env.example  .gitignore  README.md  pyproject.toml
claude-plans/: peppy-enchanting-naur.md
config/: models.yaml  repos.yaml  rubric.yaml
docs/: session-findings.md
hooks/: prepare-commit-msg
scripts/: install-hook
src/cmb/: __init__.py  categorize.py  cli.py  dataset.py  generator.py  judge_io.py  openrouter.py  paths.py  replay.py  report.py  runner.py
tests/: test_dataset.py  test_judge_io.py  test_replay.py  test_report.py
